# aws-vpc-reporter

./: .gitignore  CONTRIBUTING.md  LICENSE  README-detailed.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/vpc_reporter/: __init__.py
src/vpc_reporter/aws/: __init__.py  client.py  exceptions.py  session.py
src/vpc_reporter/cache/: __init__.py  cache.py
src/vpc_reporter/cli/: __init__.py  list_command.py  main.py  report_command.py
src/vpc_reporter/config/: config.py
src/vpc_reporter/cost/: __init__.py  analyzer.py
src/vpc_reporter/operations/: __init__.py  async_collector.py  cgw_ops.py  dhcp_ops.py  dx_vif_ops.py  eip_ops.py  eni_ops.py  flow_logs_ops.py  igw_ops.py  nat_ops.py  network_acl_ops.py  peering_ops.py  route_table_ops.py  security_group_ops.py  subnet_ops.py  sync_collector.py  tgw_ops.py  vgw_ops.py  vpc_attributes_ops.py  vpc_endpoint_ops.py  vpc_ops.py  vpn_ops.py
src/vpc_reporter/output/: __init__.py  console.py  json_output.py  markdown.py  yaml_output.py
tests/integration/: test_all_sections_integration.py
tests/unit/: test_async_collector.py  test_aws_client.py  test_cache.py  test_cli_commands.py  test_config.py  test_dhcp_ops.py  test_eip_ops.py  test_igw_ops.py  test_nat_ops.py  test_network_acl_ops.py  test_output_formatters.py  test_peering_ops.py  test_route_table_ops.py  test_security_group_ops.py  test_subnet_ops.py  test_vpc_endpoint_ops.py  test_vpc_ops.py  test_vpn_ops.py
